generate resume has been separated
